shifting more stuff also I have fixed the steam so that you know what tab you are in

--- a/src/style.css
+++ b/src/style.css
@@ -68,3 +68,16 @@ main img{
     height: 200px;
     width: 200px;
 }
+
+.steam{
+    transform: rotate(180deg);
+    height: 20px;
+    align-self: start;
+    display: none;
+    opacity: 50%;
+  
+}
+
+.active{
+    display: block;
+}
